<resources>
    <string name="app_name">MyInventoryApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="signup">Sign Up</string>
    <string name="username">username</string>

    <string name="email_err_msg">invalid email</string>
    <string name="name_err_msg">invalid username</string>
    <string name="password_err_msg">password must be 6 character long</string>
    <string name="location_updated">Location Update</string>
    <string name="remove_location_updates">remove update</string>
    <string name="launch_activity">launch app</string>
    <string name="permission_rationale">premission rational</string>
    <string name="ok">ok</string>
    <string name="enable">Enable Tracking</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>